--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Christopher Nam
 
 # Short bio or description (displayed in the header)
-description: Blue Volvo 87 Personal repo.
+description: BlueVolvo87 Personal repo.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
@@ -21,14 +21,14 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: bluevolvo87/jekyll-now
+  github: bluevolvo87/bluevolvo87.github.io
   instagram:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: https://www.youtube.com/@naanbread87 # channel/<your_long_string> or user/<user-name>
+  youtube: user/@naanbread87 # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
 
 
@@ -41,7 +41,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: https://buymeacoffee.com/bluevolvo87
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
@@ -71,6 +71,9 @@ kramdown:
 # Set the Sass partials directory, as we're using @imports
 sass:
   style: :expanded # You might prefer to minify using :compressed
+
+#Jekyll theme
+theme: jekyll-theme-time-machine
 
 # Use the following plug-ins
 gems:
