--- a/_config.yml
+++ b/_config.yml
@@ -28,11 +28,7 @@ footer-links:
   rss: # just type anything here for a working RSS icon
   twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-<<<<<<< HEAD
-  youtube: user/@naanbread87 # channel/<your_long_string> or user/<user-name>
-=======
-  youtube: @naanbread87 # channel/<your_long_string> or user/<user-name>
->>>>>>> d9312e31691e8aa90d36c911210ea4fd4ccc3216
+  youtube: user/naanbread87 # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
 
 
